--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Created by Diwakar Kashyap, this portfolio website's full code is available on GitHub for you to use and customize as you wish."
     />
+
+    <meta
+    name="keywords"
+    content=" Full stack web developer , Diwakar Kashyap, Diwakar , Kashyap, Diwakar Portfolio, Diwakar Github, Diwakar Twitter , Diwaker X , Diwakar Blockchain , Blockchain Developer Diwakar , Frontend Developer Diwakar , Javascript by Diwakar, Javascript by Diwakar Kashyap, Golang by Diwakar, Go by Diwakar, Golang by Diwakar Kashyap, opensource developer Diwakar, opensource, Diwakar Kashyap Twitter "
+/>
     <link rel="apple-touch-icon" href="./fav.png" />
     
     <!--
